[package]
name = "openqasm3"
version = "0.1.0"
edition = "2021"
authors = ["OpenQASM3.0-rs contributors"]
license = "MIT"
description = "Rust interface for OpenQASM 3.0 - parser, AST, and printer"
repository = "https://github.com/kengohirata/OpenQASM3.0-rs"
keywords = ["quantum", "openqasm", "parser", "quantum-computing"]
categories = ["parsing", "science"]

[dependencies]
nom = "7.1"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
